# HyprPanel

./: .eslintignore  .eslintrc.js  .eslintrc.json  .gitignore  .gitmodules  .prettierignore  .prettierrc  ;  HyprPanel  LICENSE  PKGBUILD  README.md  app.ts  astal  config.js  default.nix  directoryMonitorService.js  directoryMonitorService.ts  env.d.ts  esbuild.config.js  flake.nix  globals.d.ts  globals.js  globals.ts  greeter.js  main.ts  make_agsv1.sh  meson.build  modules.jsonc  nohup.out  options.ts  package-lock.json  package.json  pnpm-lock.yaml  style.css  style.css.map  tsconfig.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  debug.yml
assets/: tokyo-night.xml
assets/themes/: rose_pine.json
customModules/: BashPoller.ts  PollVar.ts  Poller.ts  config.ts  module.ts  theme.ts  utils.ts
customModules/cpu/: computeCPU.ts  index.ts
customModules/cputemp/: helpers.ts  index.ts
customModules/hypridle/: helpers.ts  index.ts
customModules/hyprsunset/: helpers.ts  index.ts
customModules/kblayout/: getLayout.ts  index.ts  layouts.ts
customModules/netstat/: computeNetwork.ts  index.ts
customModules/power/: index.ts
customModules/ram/: computeRam.ts  index.ts
customModules/storage/: computeStorage.ts  index.ts
customModules/style/: style.scss
customModules/submap/: helpers.ts  index.ts
customModules/updates/: index.ts
customModules/weather/: index.ts
globals/: dropdown.ts  mousePos.ts  network.ts  notification.ts  useTheme.ts  utilities.ts  variables.ts  wallpaper.ts  weather.ts  window.ts
greeter/: auth.ts  config.js  greeter.js  greeter.ts  session.ts
greeter/scss/: main.scss  style.ts
greeter/services/: Login.ts  loginSession.ts
lib/: icons.ts  option.ts  session.ts  utils.ts  variables.ts
lib/constants/: colors.ts  workspaces.ts
lib/poller/: BashPoller.ts  FunctionPoller.ts  Poller.ts  poller.interface.ts
lib/shared/: media.ts  notifications.ts
lib/types/: audio.d.ts  bar.d.ts  dropdownmenu.d.ts  filechooser.d.ts  gpustat.d.ts  mpris.d.ts  network.d.ts  notification.d.ts  options.d.ts  popupwindow.d.ts  power.d.ts  powerprofiles.d.ts  utils.d.ts  variable.d.ts  (+4 more)
nix/: config-example.nix  default.nix  hjem-modules.nix  hjem.nix  module.nix  overlay.nix
scripts/: analyze_codebase.sh  bluetooth.py  checkUpdates.sh  fillThemes.js  fillThemes.sh  hyprpanel_launcher.sh.in  install_fonts.sh  makeTheme.ts  makevivid.js  migrate_utils.sh  replaceColors.ts  runUpdates.sh  screen_record.sh
scss/: colors.scss  entry.scss  highlights.scss  main.scss  optionsTrackers.ts  options_trackers.ts  style.ts  variables.scss
services/: Brightness.js  Brightness.ts  Cava.ts  Cpu.ts  Ram.ts  Storage.ts  Wallpaper.ts  bluetooth.py  cava.ts  screen_record.sh  snapshot.sh
src/: globals.d.ts  options.bkup.ts  options.ts
themes/: catppuccin_frappe.json  catppuccin_frappe_split.json  catppuccin_frappe_vivid.json  catppuccin_latte.json  catppuccin_latte_split.json  catppuccin_latte_vivid.json  catppuccin_macchiato.json  catppuccin_macchiato_split.json  catppuccin_macchiato_vivid.json  catppuccin_mocha.json  catppuccin_mocha_split.json  catppuccin_mocha_vivid.json  cyberpunk.json  cyberpunk_split.json  cyberpunk_vivid.json  dracula.json  dracula_split.json  dracula_vivid.json  everforest.json  everforest_split.json  everforest_vivid.json  gruvbox.json  gruvbox_split.json  gruvbox_vivid.json  monochrome.json  monochrome_split.json  monochrome_vivid.json  nord.json  nord_split.json  nord_vivid.json  one_dark.json  one_dark_split.json  one_dark_vivid.json  rose_pine.json  rose_pine_moon.json  rose_pine_moon_split.json  rose_pine_moon_vivid.json  rose_pine_split.json  rose_pine_vivid.json  tokyo_night.json  (+5 more)
(+1370 files in other folders)
